--- a/src/component/faq/faq.css
+++ b/src/component/faq/faq.css
@@ -4,15 +4,5 @@
   color: white !important;
 }
 .faq1 {
-  max-width: 750px;
-  background-color: black !important;
-  color: white !important;
+  color: black !important;
 }
-.colorWhite{
-  color: white;
-}
-.backgroundBlack{
-  background-color: black;
-  height: 100vh;
-}
-
